[package]
name = "lotp"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"
description = "A Rust library with support for HOTP and TOTP one time password generations."
license-file = "LICENSE"
homepage = "https://github.com/aidos9/lotp"
repository = "https://github.com/aidos9/lotp"
readme = "README.md"

[dependencies]
ring = "0.16"
base32 = "0.4"
